update profile routes
